# metagame

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yaml
hack/metagame-gen/: Cargo.toml
hack/metagame-gen/src/: main.rs
nomad/: metagame.nomad.hcl
src/: alert_types.rs  alerts.rs  main.rs  misc.rs  types.rs  zones.rs
src/html/: index.html
